# parallel-task-runner

./: README.md  my_script.py  pyproject.toml
parallel_task_runner/: config.py  manager.py  worker.py
